Fix Layout Issues
Fixed left panel width issue not aligning with logo. Fixed nav item text wrapping.

--- a/www/styles/SIR_style.scss
+++ b/www/styles/SIR_style.scss
@@ -69,6 +69,7 @@ ul.navbar li ul li a {
 	font-size:12px;
 	text-transform:none;
 	background:url("../images/dot-yellow.gif") 8px 9px no-repeat;
+	white-space: normal;
 }
 
 ul.navbar li ul li a:hover {
